# dsba-prog-2022spring-wshps05-06

./: README.md
code/src/: CMakeLists.txt
code/src/arrays_basics/: main.cpp
code/src/avgfunc/: main.cpp
code/src/files/: main.cpp
code/src/filter_input/: main.cpp
code/src/ints_lines/: main.cpp
code/src/list_words/: main.cpp
code/src/name/: main.cpp
code/src/name_with_spaces/: main.cpp
code/src/read_from_stream/: main.cpp
code/src/read_n_tuples/: main.cpp
code/src/split_and_output/: main.cpp
code/src/std_string/: main.cpp
code/src/string_conversions/: main.cpp
code/src/string_stream/: main.cpp
code/src/type_conversion/: main.cpp
data/filter_input/: input.txt
data/problem8_files/: my_out.txt
